<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guanrong.android_cli.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bj"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textColor="#e70011ff"
                android:text="@string/title"
                android:id="@+id/title"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="145dp"
                app:layout_constraintTop_toTopOf="@id/title"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/tubiao"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="20sp"
                    android:layout_marginStart="30dp"
                    android:textColor="#e70011ff"
                    android:text="@string/user"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="王大壮"
                    android:hint="@string/user_hint"
                    android:id="@+id/user_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="20sp"
                    android:layout_marginStart="30dp"
                    android:textColor="#e70011ff"
                    android:text="@string/password"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:inputType="textPassword"
                    android:text="123456"
                    android:hint="@string/password_hint"
                    android:id="@+id/user_password"/>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="5dp"
                android:id="@+id/login_btn"
                android:background="@drawable/shape"
                android:textColor="#ffffff"
                android:text="@string/login"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"
                android:text="@string/forget_password"
                android:textColor="#e70011ff"
                android:id="@+id/forget_pw"
                android:layout_marginStart="40dp" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
